Fix tag selection input on discussion modal going out of screen (#83)
Calculate width of input field dynamically based on content, this fixes the bug by only shifting tags out of view when necessary

--- a/packages/ext-tags/less/forum/TagDiscussionModal.less
+++ b/packages/ext-tags/less/forum/TagDiscussionModal.less
@@ -44,6 +44,7 @@
   padding-bottom: 0;
   overflow: hidden;
   height: auto;
+  cursor: text;
 
   input {
     display: inline;
@@ -51,7 +52,7 @@
     margin-top: -2px;
     border: 0 !important;
     padding: 0;
-    width: 100%;
+    max-width: 100%;
     margin-right: -100%;
     background: transparent !important;
   }
